<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

        <!-- Color view that displays the resulting color -->

        <!-- Group for Switches, SeekBars, and EditTexts -->

        <!-- Reset Button -->

        <TextView
            android:id="@+id/textView"
            android:layout_width="91dp"
            android:layout_height="46dp"
            android:layout_marginTop="16dp"
            android:text="@string/intital_value"
            android:textAlignment="center"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="24sp"
            android:autoSizeStepGranularity="2sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.691"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchGroup" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="410dp"
            android:layout_height="310dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <View
                    android:id="@+id/colorView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginBottom="28dp"
                    android:background="@color/black" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="364dp"
            android:backgroundTint="#3682BB"
            android:text="@string/reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.294"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchGroup" />

        <LinearLayout
            android:id="@+id/switchGroup"
            android:layout_width="401dp"
            android:layout_height="166dp"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switch1"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/red"
                            android:textAlignment="center"
                            android:textStyle="bold" />

                        <SeekBar
                            android:id="@+id/seekBar4"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="2"
                            android:max="255"
                            android:min="0"
                            android:progress="0" />

                        <EditText
                            android:hint="@string/enter_a_value"
                            android:id="@+id/editTextRed"
                            android:layout_width="60dp"
                            android:layout_height="match_parent"
                            android:importantForAutofill="no"
                            android:inputType="numberDecimal"
                            android:text="@string/_0"
                            android:textAlignment="center"
                            android:textStyle="bold" />
                </LinearLayout>

                <!-- Green Row -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switch2"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/green"
                            android:textAlignment="center"
                            android:textStyle="bold" />

                        <SeekBar
                            android:id="@+id/seekBar5"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="2"
                            android:max="255"
                            android:min="0"
                            android:progress="0" />

                        <EditText
                            android:id="@+id/editTextGreen"
                            android:layout_width="60dp"
                            android:layout_height="match_parent"
                            android:importantForAutofill="no"
                            android:inputType="numberDecimal"
                            android:text="@string/_0_red"
                            android:textAlignment="center"
                            android:textStyle="bold" />
                </LinearLayout>

                <!-- Blue Row -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switch3"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/blue"
                            android:textAlignment="center"
                            android:textStyle="bold" />

                        <SeekBar
                            android:id="@+id/seekBar6"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="2"
                            android:max="255"
                            android:min="0"
                            android:progress="0" />

                        <EditText
                            android:id="@+id/editTextBlue"
                            android:layout_width="60dp"
                            android:layout_height="match_parent"
                            android:importantForAutofill="no"
                            android:inputType="numberDecimal"
                            android:text="@string/_0_blue"
                            android:textAlignment="center"
                            android:textStyle="bold" />
                </LinearLayout>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
